--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <link rel="import" href="x-flipbook.html">
 <style>
   x-flipbook {
-    display: inline-block;
-    width: 300px;
-    height: 400px;
+    float:left;
     background: #eee;
   }
 </style>
