--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -2,12 +2,10 @@
   <style>
   * { margin:0; padding:0 }
   
-  figure { overflow-x:scroll; position:relative; opacity:0 }
+  figure { overflow-x:scroll; position:relative; opacity:0; cursor:ew-resize }
   span { display:inline-block }
   img { position:absolute; opacity:0 }
   .currentFrame { opacity:1 }
-  
-  template:hover { cursor:ew-resize }
   
   </style>
   <template>
@@ -18,7 +16,7 @@
   </template>
   <script>
     Polymer("x-flipbook", {
-      created: function init() {
+      created: function() {
         var imgs = $('img'),
             numOfFrames = imgs.length,
             imgWidth = imgs.width(),
