will fix this later

--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -14,6 +14,7 @@
       <span></span>
     </figure>
   </template>
+  <script src="jquery-2.0.3.min.js"></script>
   <script>
     Polymer("x-flipbook", {
       created: function() {
