debug all the things

--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -23,6 +23,10 @@
             imgWidth = imgs.width(),
             imgHeight = imgs.height();
 
+        console.log('imgWidth: ' + imgWidth);
+        console.log('imgHeight: ' + imgHeight);
+        console.log('numOfFrames: ' + numOfFrames);
+        
         // set flipbook viewport size
         $('figure').css('width', imgWidth)
                    .css('height', imgHeight);
