--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -14,7 +14,7 @@
       <span id="scroll-strip"></span>
     </figure>
   </template>
-  <script src="jquery-2.0.3.min.js"></script>
+  <script>window.jQuery || document.write('<script src="jquery-2.0.3.min.js"><\/script>')</script>
   <script>
     Polymer("x-flipbook", {
       created: function() {
