making scrollbar visible for mobile debugging

--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -2,7 +2,7 @@
   <style>
   * { margin:0; padding:0 }
   
-  figure { overflow-x:scroll; position:relative; opacity:0; cursor:ew-resize }
+  figure { overflow-x:scroll; position:relative; padding-bottom:10px; opacity:1; cursor:ew-resize }
   span { display:inline-block }
   img { position:absolute; opacity:0 }
   .currentFrame { opacity:1 }
