changing CSS selector names to match JavaScript

--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -2,10 +2,10 @@
   <style>
   * { margin:0; padding:0 }
   
-  figure { overflow-x:scroll; position:relative; padding-bottom:10px; opacity:1; cursor:ew-resize }
-  span { display:inline-block }
+  #flipbook { overflow-x:scroll; position:relative; padding-bottom:10px; opacity:1; cursor:ew-resize }
+  #scroll-strip { display:inline-block }
   img { position:absolute; opacity:0 }
-  .currentFrame { opacity:1 }
+  img.currentFrame { opacity:1 }
   
   </style>
   <template>
