mobile safari yo

--- a/x-flipbook.html
+++ b/x-flipbook.html
@@ -2,7 +2,8 @@
   <style>
   * { margin:0; padding:0 }
   
-  #flipbook { overflow-x:scroll; position:relative; padding-bottom:10px; opacity:1; cursor:ew-resize }
+  #flipbook { overflow-x:scroll; -webkit-overflow-scrolling:touch;
+              position:relative; opacity:1; cursor:ew-resize }
   #scroll-strip { display:inline-block }
   img { position:absolute; opacity:0 }
   img.currentFrame { opacity:1 }
